--- a/Otto_EDA_Final.ipynb
+++ b/Otto_EDA_Final.ipynb
@@ -63,7 +63,7 @@
         "        # Flatten the 'events' column into a new DataFrame\n",
         "        events_df = pd.concat([pd.DataFrame(x) for x in chunk['events']], keys=chunk['session']).reset_index(level=1, drop=True).reset_index()\n",
         "\n",
-        "        # Concatenate this chunk to the train_sessions DataFrame #where is the train sessions\n",
+        "        # Concatenate this chunk to the train_sessions DataFrame\n",
         "        dfs = pd.concat([train_sessions, events_df])\n",
         "\n",
         "    else:\n",
