--- a/Otto_EDA_Final.ipynb
+++ b/Otto_EDA_Final.ipynb
@@ -48,11 +48,11 @@
       },
       "outputs": [],
       "source": [
-        "data_path = Path('dataset/')  # change this to your actual path\n",
+        "data_path = Path('dataset/')  \n",
         "\n",
         "chunksize = 100_000\n",
         "\n",
-        "dfs = pd.DataFrame()\n",
+        "train_sessions = pd.DataFrame()\n",
         "\n",
         "chunks = pd.read_json(data_path / 'train.jsonl', lines=True, chunksize=chunksize)\n",
         "\n",
